--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,80 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ionic Demo Native Service
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        Service
+      </ion-col>
+      <ion-col>
+        {{serviceStatus}}
+      </ion-col>
+      <ion-col>
+        <button ion-button (click)="toggleService()">Toggle</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        Timer
+      </ion-col>
+      <ion-col>
+        {{timerStatus}}
+      </ion-col>
+      <ion-col>
+        <button ion-button (click)="toggleTimer()"  [disabled]="!timerBtn.disabled">Toggle</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        Boot
+      </ion-col>
+      <ion-col>
+        {{bootStatus}}
+      </ion-col>
+      <ion-col>
+        <button ion-button (click)="toggleBoot()">Toggle</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        Configuration
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-3>
+        Hello To
+      </ion-col>
+      <ion-col col-9>
+        <ion-item>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <button ion-button block (click)="updateBtn()">Update Config</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        Ultimo Resultado
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col text-center>
+        {{resultMessage}}
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <button ion-button block (click)="refreshBtn()">Refresh</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
